--- a/src/main/front-end/final-project/src/styles/profileContent.module.css
+++ b/src/main/front-end/final-project/src/styles/profileContent.module.css
@@ -3,3 +3,15 @@
     width: 800px;
     left: 1rem;
 }
+
+.profileContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.photo {
+    width: 400px;
+    border-radius: 50%;
+    margin-bottom: 50px;
+}
